--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face
+{
+  font-family: 'VM';
+  src: local('VM'), url(./fonts/VintageMohai-DemoVersion-Regular.ttf) format('truetype')
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
